if get_option('gtk-doc')

# TODO:
# * generate tree_index.sgml
# * use configure_file when meson is fixed

# sgml_file = configure_file(
#   input : 'muffin-docs.sgml.in',
#   output: 'muffin-docs.sgml',
#   configuration: conf,
# )

gnome.gtkdoc('muffin',
  main_sgml: 'muffin-docs.sgml.in',
  content_files: [
    'muffin-overview.xml',
    'running-muffin.xml',
  ],
  ignore_headers: [
    'async-getprop.h',
    'atoms.h',
    'core/bell.h',
    'boxes-private.h',
    'clutter-utils.h',
    'cogl-utils.h',
    'compositor-private.h',
    'constraints.h',
    'core.h',
    'display-private.h',
    'draw-workspace.h',
    'edge-resistance.h',
    'eventqueue.h',
    'frame.h',
    'frames.h',
    'group-private.h',
    'group-props.h',
    'iconcache.h',
    'inlinepixbufs.h',
    'keybindings-private.h',
    'meta-background-actor-private.h',
    'meta-background-group-private.h',
    'meta-dbus-login1.h',
    'meta-module.h',
    'meta-plugin-manager.h',
    'meta-shadow-factory-private.h',
    'meta-texture-rectangle.h',
    'compositor/meta-texture-tower.h',
    'meta-window-actor-private.h',
    'meta-window-group.h',
    'meta-window-shape.h',
    'muffin-enum-types.h',
    'muffin-Xatomtype.h',
    'place.h',
    'preview-widget.h',
    'region-utils.h',
    'resizepopup.h',
    'screen-private.h',
    'session.h',
    'stack-tracker.h',
    'src/core/stack.h',
    'stamp-muffin-enum-types.h',
    'tabpopup.h',
    'theme-private.h',
    'theme.h',
    'tile-preview.h',
    'ui.h',
    'window-private.h',
    'window-props.h',
    'workspace-private.h',
    'xprops.h',
  ],
  # mkdb_args: ['--xml-mode', '--output-format=xml'],
  # scan_args: [ '--rebuild-types', '--rebuild-sections' ],
  src_dir: join_paths(meson.source_root(), 'src'),
)

endif
